--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "bootstrap": ">=4.1.2",
     "bootswatch": "^4.1.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
@@ -11,7 +11,8 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
