--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": ">=4.1.2",
     "bootswatch": "^4.1.1",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "react": "^16.4.1",
@@ -12,6 +14,7 @@
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.5.2",
     "url-parse": "^1.4.3"
   },
   "scripts": {
