--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.5.2",
+    "styled-components": "^4.1.3",
     "url-parse": "^1.4.3"
   },
   "scripts": {
