--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "history": "^4.7.2",
     "jest-fetch-mock": "^1.6.6"
   }
 }
