--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql-tag": "^2.10.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-bootstrap": "^0.32.1",
@@ -20,7 +21,8 @@
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.5.2",
     "styled-components": "^4.1.3",
-    "url-parse": "^1.4.3"
+    "url-parse": "^1.4.3",
+    "waait": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,6 +31,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.13.0",
+    "eslint-config-react-app": "^3.0.6",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "history": "^4.7.2",
     "jest-fetch-mock": "^1.6.6"
   }
