updating relative paths in package.json for deploy payload

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recipes-app-react",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.22",
