abstracting gql uri; more deploy adjustments

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js: 8.11.0
 before_script: npm test
-script: npm run build
+script: npm run build:stage
 deploy:
   provider: s3
   bucket: yukonsolns.com
