--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "^0.1.22",
     "bootstrap": ">=4.1.2",
     "bootswatch": "^4.1.1",
+    "env-cmd": "^8.0.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "graphql": "^14.0.2",
@@ -28,6 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:stage": "env-cmd .env.stage npm run build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
