fixing build commands

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "PUBLIC_URL=/jz-portfolio/recipes-app/ react-scripts build",
-    "build:stage": "PUBLIC_URL=/jz-portfolio/recipes-app-stage/ env-cmd .env.stage npm run build",
+    "build:stage": "PUBLIC_URL=/jz-portfolio/recipes-app-stage/ env-cmd .env.stage react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
